--- a/static/calendar.html
+++ b/static/calendar.html
@@ -210,7 +210,7 @@
       if (e.key === 'Enter') {
         const filtered = filterEvents(allEvents, e.target.value);
         renderCalendar(filtered);
-        if (calendar) calendar.changeView('listYear');
+        if (calendar) calendar.changeView('listFuture');
         hidePopup();
         hideDayPopup();
         const countEl = document.getElementById('filtered-events-count');
@@ -255,6 +255,13 @@
           center: 'title',
           right: 'dayGridMonth,timeGridWeek,timeGridDay,listYear'
         },
+        views: {
+          listFuture: {
+            type: 'list',
+            duration: { years: 2 },
+            buttonText: 'À venir'
+          }
+        },        
         locale: 'fr',
         locales: FullCalendar.globalLocales,
         firstDay: 1,
