add searchable calendar using fullCalendar

--- a/static/calendar.html
+++ b/static/calendar.html
@@ -253,7 +253,7 @@
         headerToolbar: {
           left: 'prev,next today',
           center: 'title',
-          right: 'dayGridMonth,timeGridWeek,timeGridDay,listYear'
+          right: 'dayGridMonth,timeGridWeek,timeGridDay,listFuture'
         },
         views: {
           listFuture: {
