--- a/static/calendar.html
+++ b/static/calendar.html
@@ -298,7 +298,7 @@
       });
       calendar = new FullCalendar.Calendar(calendarEl, {
         
-        initialView: 'dayGridMonth',
+        initialView: 'listFuture',
         headerToolbar: {
           left: 'prev,next today',
           center: 'title',
