bug lateral mvt

--- a/static/calendar.html
+++ b/static/calendar.html
@@ -137,6 +137,9 @@
 
       overlay.style.display = "block";
       tipEl.style.display = "block";
+      tipEl.style.opacity = "1";
+      tipEl.style.transform = "none";
+      tipEl.style.transition = "none";      
     }
 
 
