change placeholder search field

--- a/static/calendar.html
+++ b/static/calendar.html
@@ -14,7 +14,7 @@
 <div id="calendar-controls">
   <label>
     🔍 Filtrer :
-    <input id="filter-input" type="text" placeholder="Mot clé">
+    <input id="filter-input" type="text" placeholder="Mot clé (Ex: 75014 rock guitare)">
   </label>
   <button id="reset-filter" type="button">❌</button>
   <div id="filtered-events-count" style="margin-left: 1rem; font-weight: bold;"></div>  
