search field width 70%

--- a/static/calendar.html
+++ b/static/calendar.html
@@ -12,10 +12,10 @@
     <body>        
 
 <div id="calendar-controls">
-  <label>
+  <label for="filter-input">
     🔍 Filtrer :
-    <input id="filter-input" type="text" placeholder="Mot clé (Ex: 75014 rock guitare)">
   </label>
+  <input id="filter-input" type="text" style="width: 70%;" placeholder="Mot-clé (ex. : 75014 rock guitare)">
   <button id="reset-filter" type="button">❌</button>
   <div id="filtered-events-count" style="margin-left: 1rem; font-weight: bold;"></div>  
   <p>Pensez à naviguer de mois en mois (flèches juste en dessous à gauche) et entre les vues liste / mois / semaine / jour (boutons de contrôle en juste en dessous à droite) pour obtenir un affichage approprié à vos besoins.</p>
