add search emoji to filter input

--- a/static/musical_ads.html
+++ b/static/musical_ads.html
@@ -45,8 +45,10 @@
   </style>
 </head>
 <body>
-  <input id="filter-input" type="text" placeholder="Filtrer par mots-clés (ex : rock guitare)">
-
+  <label for="filter-input">
+    🔍 Filtrer :
+  </label>
+  <input id="filter-input" type="text" style="width: 70%;" placeholder="Mot-clé (ex. : 75014 rock guitare)">
   <div id="results"></div>
 
   <script>
