--- a/static/calendar.html
+++ b/static/calendar.html
@@ -62,7 +62,7 @@
     const calendarEl = document.getElementById('calendar');
 
     const usePlugin = "ics";
-    const rawIcsUrl = "https://priv-calendar-zap.zikapanam.fr";
+    const rawIcsUrl = "https://priv-calendar-zap.zikapanam.fr?toml=true";
     const language = "fr";
 
         function showDayPopup(contentHtml, events) {
